      and are reaching it.

  o Major bugfixes:
    - Stop servers from crashing if they set a Family option (or
      maybe in other situations too). Bugfix on 0.2.0.9-alpha; reported
      by Fabian Keil.
    - When the clock jumps forward a lot, do not allow the bandwidth
      buckets to become negative.  Bugfix on 0.1.2.x; fixes Bug 544.

  o Major bugfixes (v3 dir, bugfixes on 0.2.0.9-alpha):
    - Consider replacing the current consensus when certificates arrive
      that make the pending consensus valid.  Previously, we were only
      considering replacement when the new certs _didn't_ help.
    - Fix an assert error on startup if we didn't already have the
      consensus and certs cached in our datadirectory: we were caching
      the consensus in consensus_waiting_for_certs but then free'ing it
      right after.
    - Avoid sending a request for "keys/fp" (for which we'll get a 400 Bad
      Request) if we need more v3 certs but we've already got pending
      requests for all of them.

  o New requirements:
    - Drop support for OpenSSL version 0.9.6.  Just about nobody was using
      it, it had no AES, and it hasn't seen any security patches since
      2004.

  o Minor features:
    - Directory authorities now decide whether routers are stable
      enough to be guards based not on their MTBF or their uptime, but
      on their fractional uptime: the fraction of the time that they
      are online. (No router counts as having uptime until we've known
      about it for at least 24 hours.)
    - Clients new hold circuitless TLS connections open for 1.5 times
      MaxCircuitDirtiness, since it is likely that they'll need to build
      a circuit over them within that timeframe. Previously, they held
      them open only for KeepalivePeriod.
    - Use "If-Modified-Since" to avoid retrieving consensus networkstatuses
      that we already have.
    - When we have no consensus, check FallbackNetworkstatusFile (defaults